# SocketProgrammingExample

./: .gitignore  README.md  TCPClient.go
hw1/: net-hw1-20190532.docx
hw2/: Makefile
hw2/assignment/: MyTCPClient.go  MyTCPServer.go  MyUDPClient.go  MyUDPServer.go
hw2/bouns_assignment/: EasyTCPClient.java  EasyTCPServer.java  EasyUDPClient.java  EasyUDPServer.java  Makefile
hw2/example/: TestTCPClient.go  TestTCPServer.go  UDPClient.go
hw2/java_example/: JavaTCPClient.java  JavaTCPServer.java
hw3/: MultiTCPServer.go  MyTCPClient.go
hw3/assignment/: MultiTCPServer.go  MyTCPClient.go
hw3/bonus_assignment/: Makefile  MultiTCPServer.c
hw4/: ChatClient_example.rs  ChatServer_example.rs
hw4/assignment/: ChatClient.go  ChatServer.go
hw4/bonus_assignment/: ChatClient.c  ChatClient.rs  ChatServer.c  Makefile  map.c  map.h
hw4/c_bonus_assignment/: ChatClient.c  ChatServer.c  Makefile  map.c  map.h
hw4/rust_bonus_assignment/: Cargo.toml  Makefile  README.md
hw4/rust_bonus_assignment/src/: ChatClient.rs  ChatServer.rs  Makefile
hw5/: SplitFileClient.go  SplitFileServer.go  hello.txt  hello.txt-part1.txt  hello.txt-part2.txt
hw5/assignment/: SplitFileClient.go  SplitFileServer.go
hw5/bouns_assignment/: SplitFileClient.java  SplitFileServer.java
hw5/rust_bonus_assignment/: Cargo.toml  Makefile
hw5/rust_bonus_assignment/src/: SplitFileClient.rs  SplitFileServer.rs
hw6/: net-hw6-20190532.docx
