[package]
name = "rust_bonus_assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rs_chat_client"
path = "src/ChatClient.rs"

[[bin]]
name = "rs_chat_server"
path = "src/ChatServer.rs"

[dependencies]
ctrlc = "3.3.0"